# farm-plugin-yaml

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  test.yaml
playground/: farm.config.ts
playground/src/: index.tsx  test.yaml  test.yml  typings.d.ts
scripts/: watch.sh
src/: lib.rs
tests/: mod.rs
tests/fixtures/: output.js
