[package]
edition = "2021"
name = "farm_plugin_yaml"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
serde_yaml = { version = "*" }
farmfe_toolkit={version = "*"}
serde = { version = "*" }


[dev-dependencies]
farmfe_testing_helpers = {version = "*"}
farmfe_compiler = { version = "*"}
